--- a/templates/pages/rooms/home.html
+++ b/templates/pages/rooms/home.html
@@ -2,6 +2,11 @@
 
 
 {% block content %}
-  hi
-{% endblock content %}
   
+  <ul>
+    {% for room in rooms %}
+      <li>{{room.name}} / {{room.price}}</li>
+    {% endfor %}
+  </ul>
+    
+{% endblock content %}
