--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
 <body>
+  {% include 'partials/header.html' %}
 
-  {% block content %}
-      Hello
-  {% endblock content %}
+  {% block content %}{% endblock content %}
 
 </body>
 </html>
