--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>{% block page_title %}{% endblock page_title %} | Hair bnb</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
-<body>
-  {% include 'partials/header.html' %}
+  <body>
+    {% include 'partials/header.html' %}
 
-  {% block content %}{% endblock content %}
+    {% block content %}{% endblock content %}
 
-  {% include 'partials/footer.html' %}
+    {% include 'partials/footer.html' %}
 
-</body>
+  </body>
 </html>
