--- a/templates/pages/rooms/home.html
+++ b/templates/pages/rooms/home.html
@@ -1,27 +1,31 @@
 {% extends 'base.html' %}
 
+{% block page_title %}
+  Home
+{% endblock page_title %}
 
 {% block content %}
-  
   <ul>
     {% for room in rooms %}
       <li>
-        <div class="house-image">
-          {% if room.host.superhost %}
-            <span>Superhost</span>
-          {% endif %}
-          <img width='50px' src="{{room.get_first_photo}}" alt="">
-          <i class="far fa-heart"></i>
-        </div>
-        <div class="house-info">
-          <div class="house__score">
-            <i class="fas fa-star"></i>
-            <span class="review-points">{{room.get_review_points}}</span>
+        <a href="{% url 'rooms:detail' room.pk %}">
+          <div class="house-image">
+            {% if room.host.superhost %}
+              <span>Superhost</span>
+            {% endif %}
+            <img width='50px' src="{{room.get_first_photo}}" alt="">
+            <i class="far fa-heart"></i>
           </div>
-          <div class="house__description">
-            {{room.country}} &bull; {{room.address}}
+          <div class="house-info">
+            <div class="house__score">
+              <i class="fas fa-star"></i>
+              <span class="review-points">{{room.get_review_points}}</span>
+            </div>
+            <div class="house__description">
+              {{room.country}} &bull; {{room.address}}
+            </div>
           </div>
-        </div>
+        </a>
       </li>
     {% endfor %}
   </ul>
