--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,6 +1,9 @@
 <header>
   <div>
     <a href="{% url 'core:home' %}">home</a>
+    <form action="{% url 'core:search' %}">
+      <input type="text" placeholder="Searching By City" name="city">
+    </form>
   </div>
   <ul>
     <li>
