--- a/templates/pages/root/search.html
+++ b/templates/pages/root/search.html
@@ -4,6 +4,12 @@
   Search
 {% endblock page_title %}
 
+
+{% block search-bar %}
+  
+{% endblock search-bar %}
+  
+
 {% block content %}
   
   {% for room in rooms %}
