--- a/templates/pages/root/search.html
+++ b/templates/pages/root/search.html
@@ -53,6 +53,7 @@
     <div class="search-from__room_type">
       <label for="room_type">Room_type</label>
       <select name="room_type" id="room_type">
+        <option value="0" {% if s_room_type == room_type.pk %} selected {% endif %}>Any Kind</option>
         {% for room_type in room_types %}
           <option value="{{room_type.pk}}" {% if s_room_type == room_type.pk|slugify %} selected {% endif %}> {{room_type}}</option>
         {% endfor %}
