Set up Login environment

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,6 @@
 <ul>
   <li>
-    <a href="#">Login</a>
+    <a href="{% url 'users:login' %}">Login</a>
   </li>
   <li>
     <a href="#">Sign Up</a>
