--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,6 +3,6 @@
     <a href="{% url 'users:login' %}">Login</a>
   </li>
   <li>
-    <a href="#">Sign Up</a>
+    <a href="{% url 'users:signup' %}">Sign Up</a>
   </li>
 </ul>
