--- a/templates/pages/users/signup.html
+++ b/templates/pages/users/signup.html
@@ -9,12 +9,12 @@
 {% block content %}
   <form action="{% url 'users:signup' %}" method="post">
     {% csrf_token %}
-    {{form}}
-    {% comment %} <input type="text" name="first_name" placeholder="Frist Name">
-    <input type="text" name="last_name" placeholder="Last Name">
-    <input type="email" name="email" placeholder="Email">
-    <input type="password" name="password" placeholder="Password">
-    <input type="password" name="password1" placeholder="Verify Password"> {% endcomment %}
+    
+    {% for field in form %}
+      {{field}}
+    {% endfor %}
+      
+    
     <button>Submit</button>
   </form>
   
