--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,8 +1,15 @@
 <ul>
-  <li>
-    <a href="{% url 'users:login' %}">Login</a>
-  </li>
-  <li>
-    <a href="{% url 'users:signup' %}">Sign Up</a>
-  </li>
+  
+  {% if user.is_authenticated %}
+    <li>
+      <a href="{% url 'users:logout' %}">Logout</a>
+    </li>
+    {% else %}
+      <li>
+        <a href="{% url 'users:login' %}">Login</a>
+      </li>
+      <li>
+        <a href="{% url 'users:signup' %}">Sign Up</a>
+      </li>
+  {% endif %}
 </ul>
