--- a/templates/pages/root/home.html
+++ b/templates/pages/root/home.html
@@ -29,17 +29,5 @@
       </li>
     {% endfor %}
   </ul>
-
-  
-  {% if rooms.has_previous %}
-    <a href="?page={{rooms.previous_page_number}}">Prev</a>
-  {% endif %}
-
-  Page {{rooms.number}} of {{rooms.paginator.num_pages}}
-
-  {% if rooms.has_next %}
-    <a href="?page={{rooms.next_page_number}}">Next</a>
-  {% endif %}
-    
-    
+  {% include 'mixins/page_number.html' with page=rooms %}
 {% endblock content %}
