--- a/templates/pages/root/search.html
+++ b/templates/pages/root/search.html
@@ -132,5 +132,7 @@
   {% for room in rooms %}
     <h1>{{room.name}}</h1>
   {% endfor %}
+
+  {% include 'mixins/page_number.html' with page=rooms%}
     
 {% endblock content %}
