--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,11 +2,11 @@
   
   {% if user.is_authenticated %}
     <li>
-      <a href="{% url 'users:logout' %}">Logout</a>
+      <a href="{% url 'users:logout' %}">Log Out</a>
     </li>
     {% else %}
       <li>
-        <a href="{% url 'users:login' %}">Login</a>
+        <a href="{% url 'users:login' %}">Log In</a>
       </li>
       <li>
         <a href="{% url 'users:signup' %}">Sign Up</a>
