Add social_login.html to signup.html

--- a/templates/pages/users/signup.html
+++ b/templates/pages/users/signup.html
@@ -14,7 +14,7 @@
       {{field}}
     {% endfor %}
       
-    
+    {% include 'mixins/social_login.html' %}
     <button>Submit</button>
   </form>
   
