Revise github_callback return None error

--- a/templates/pages/users/profile.html
+++ b/templates/pages/users/profile.html
@@ -51,7 +51,7 @@
       <span>{{user_obj.bio}}</span>
     </div>
     <button>
-      <a href="{% url 'users:update-profile' user.pk %}">Edit Profile</a>
+      <a href="{% url 'users:update-profile' user_obj.pk %}">Edit Profile</a>
     </button>
   </div>
 {% endblock content %}
