--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
   <body>
+    {% include 'partials/messages.html' %}
     <header>
         <div>
           <a href="{% url 'core:home' %}">home</a>
