--- a/templates/pages/users/update_profile.html
+++ b/templates/pages/users/update_profile.html
@@ -77,6 +77,7 @@
       <button>Edit Profile</button>
     </div>
   </form>
+  <a href="{% url 'users:change-password' user.pk %}">Change Password</a>
   <button>
     <a href="{% url 'users:profile' user.pk %}">Back</a>
   </button>
