--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,18 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block page_title %}{% endblock page_title %} | Hair bnb</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
   <body>
     {% include 'partials/messages.html' %}
-    <header>
-        <div>
-          <a href="{% url 'core:home' %}">home</a>
-          {% block search-bar %}
-            <form action="{% url 'core:search' %}">
-              <input type="text" placeholder="Searching By City" name="city">
-            </form>
-          {% endblock search-bar %}
+    <header class='flex justify-between items-center px-6 border-b mb-9'>
+        <div class="flex">
+          <a href="{% url 'core:home' %}" class="mr-4 flex items-center">
+            <img src="/static/logo.png" alt="logo" class="w-8 mr-2">
+            <span class="font-bold text-xl text-red-500">hairbnb</span>
+          </a>
         </div>
+        {% block search-bar %}
+          <form action="{% url 'core:search' %}" class="w-1/5 ">
+            <input type="text" placeholder="Searching By City" name="city" class="shadow border-none outline-none px-8 py-3 rounded-3xl w-full border-gray-500 border">
+          </form>
+        {% endblock search-bar %}
       {% include 'partials/nav.html' %}
     </header>
 
