--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -5,4 +5,40 @@
   @apply font-semibold text-gray-700  hover:border-gray-600 border-b-2 border-transparent py-7 px-4;
 }
 
+.form {
+  @apply flex flex-col;
+  .form_input {
+    @apply border p-3 w-full border-gray-400;
+    input:not([type="file"]):not([type="date"]),
+    textarea {
+      @apply w-full outline-none;
+    }
+  }
+  .select {
+    @apply flex justify-between items-center border p-3 w-full border-gray-400;
+    label {
+      @apply mr-2;
+    }
+    select {
+      @apply w-3/4 border border-gray-400 p-1 rounded-md;
+    }
+  }
+  .birthdate {
+    @apply flex justify-between items-center border p-3 w-full border-gray-400;
+    label {
+      @apply mr-2;
+    }
+    input {
+      @apply w-3/4 border border-gray-400 p-1 rounded-md;
+    }
+  }
+  div:not(:nth-child(2)) {
+    @apply border-t-0;
+  }
+}
+
+.button {
+  @apply rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full;
+}
+
 @tailwind utilities;
