--- a/templates/mixins/social_login.html
+++ b/templates/mixins/social_login.html
@@ -1,12 +1,12 @@
-<div class="social-login">
-  <div class="github-login">
-    <button>
-      <a href="{% url 'users:github-login' %}">Login with Github</a>
-    </button>
-  </div>
-  <div class="kakao-login">
-    <button>
-      <a href="{% url 'users:kakao-login' %}">Login with Kakao</a>
-    </button>
-  </div>
+<div class="social-login mt-4">
+  <button class="button bg-gray-700 text-white">
+    <a href="{% url 'users:github-login' %}">
+      <i class="fab fa-github mr-2"></i>Login with Github
+    </a>
+  </button>
+  <button class="button bg-yellow-300 text-yellow-900 mt-2">
+    <a href="{% url 'users:kakao-login' %}">
+      <i class="fas fa-comment mr-2"></i>Login with Kakao
+    </a>
+  </button>
 </div>
