--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -32,13 +32,18 @@
       @apply w-3/4 border border-gray-400 p-1 rounded-md;
     }
   }
+  .button {
+    @apply mt-3 bg-red-500 text-white rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full;
+  }
   div:not(:nth-child(2)) {
     @apply border-t-0;
   }
 }
 
-.button {
-  @apply rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full;
+.social-login {
+  .button {
+    @apply rounded-lg px-1 py-2 text-base font-bold tracking-wider w-full;
+  }
 }
 
 @tailwind utilities;
